add support for wifi hotspot
